Fix navbar toggler position on mobile when menu is open

--- a/src/component/bar/Menu.css
+++ b/src/component/bar/Menu.css
@@ -198,6 +198,7 @@
 
 @media (max-width: 992px) {
     .Menu .navbar-brand {
+        position: relative;
         width: 100% !important;
     }
 
